--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
     <script>
         // Google API client ID - Replace with your own client ID from Google Developer Console
-        const CLIENT_ID = 'YOUR_GOOGLE_CLIENT_ID';
-        const API_KEY = 'YOUR_GOOGLE_API_KEY';
+        const CLIENT_ID = '293891286204-ri9t692adthuj9jdf7j65uqignm8t644.apps.googleusercontent.com';
+        const API_KEY = 'AIzaSyDHtoCyOQBOo8Q0Bgr0dpWWIUvMh1P-PsE';
         
         // Authorization scopes required by the API
         const SCOPES = 'https://www.googleapis.com/auth/contacts.readonly';
