--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div id="auth-status">
                 <p>Please sign in to view your contacts.</p>
                 <button id="signin-button" disabled>Sign in with Google</button>
+                <div id="debug-info" style="display: none;"></div>
             </div>
             <div id="user-info" style="display: none;">
                 <p>Signed in as: <span id="user-name"></span></p>
